--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,15 @@
 body{background-color: #f9f2f2;
- font-family:'Roboto', sans-serif;}
+ font-family:'Roboto', sans-serif;
+width: 80%;}
+
+ header{border-bottom: 2px solid #f9f2f2;
+padding: 0 0 25 0;}
+a{color: #5c58c4;}
 
 .weather-app{background:#ffff;
-max-width: 700px;
+max-width: 600px;
 margin: auto;
-box-shadow: 0 30px 50px#f8c5ed;
+box-shadow: 0 30px 30px#f8c5ed;
 border-radius: 14px;
 padding: 30px;}
 .search-input{background: #f9f2f2;
@@ -16,6 +21,29 @@ font-size: 18px;}
 .search-form{background: #5c58c4;
 border: none;
 border-radius: 6px;
-padding: 20px 20px;
+padding: 20px 30px;
 font-size: 17px;
 color: #ffff;}
+main{padding: 30px 0;}
+.app-data{display: flex;
+justify-content: space-between;}
+.weather-city{margin: 0;
+font-size: 38px;
+line-height: 48px;}
+.app-details{font-size: 16px;
+line-height: 20px;}
+strong{color: #f31b1b;}
+.weather-temperature-display{display: flex;}
+.app-icon{font-size: 40px;
+margin-top: 20px;
+}
+.app-temperature{font-size: 80px;
+font-weight: bold;}
+.app-unit{font-size: 30px;}
+
+
+footer{border-top: 1px solid #f9f2f2;
+padding: 30px 0 0 0;
+font-size: 14px;
+color: #880e70;
+text-align: center;}
